fix error in z-index

--- a/frontend/message/css/containerChat.css
+++ b/frontend/message/css/containerChat.css
@@ -1,10 +1,5 @@
 .container-chat{
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
 }
 
 .container-chat > div{
